fixed bootstrap crash